# Simple-Rust-Audio-Visualizer-WebAssembly

./: Cargo.toml  build.bat
src/: lib.rs  rainbow_style.rs  ring_style.rs
